--- a/my_list.html
+++ b/my_list.html
@@ -1,6 +1,6 @@
-"Well I've got thick skin and an elastic heart"
-"But your blade it might be too sharp"
-"I'm like a rubber band until you pull too hard"
-"Yeah I may snap and I move fast"
-"You won't see me fall apart"
-"'Cause I've got an elastic heart"
+<li>"Well I've got thick skin and an elastic heart"</li>
+<li>"But your blade it might be too sharp"</li>
+<li>"I'm like a rubber band until you pull too hard"</li>
+<li>"Yeah I may snap and I move fast"</li>
+<li>"You won't see me fall apart"</li>
+<li>"'Cause I've got an elastic heart"</li>
